[gd_scene load_steps=12 format=3 uid="uid://bldogipfybrv8"]

[ext_resource type="PackedScene" uid="uid://cbkh2tq3o0xwf" path="res://entity/enemy/enemy.tscn" id="1_1xxe0"]
[ext_resource type="Texture2D" uid="uid://63y2oar458iy" path="res://entity/enemy/thrower/enemy_thrower.png" id="2_nee8l"]
[ext_resource type="Script" uid="uid://do6ltv26vj0i8" path="res://entity/enemy/thrower/enemy_thrower.gd" id="2_qdrwu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ly6jm"]
size = Vector2(1038, 415)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nk60c"]
size = Vector2(95, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qdrwu"]
size = Vector2(110, 136)

[sub_resource type="Animation" id="Animation_nk60c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_l1v1j"]
resource_name = "attack"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 6]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"thorw_box"
}]
}

[sub_resource type="Animation" id="Animation_ly6jm"]
resource_name = "idle"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_bf6qg"]
resource_name = "move"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7d7re"]
_data = {
&"RESET": SubResource("Animation_nk60c"),
&"attack": SubResource("Animation_l1v1j"),
&"idle": SubResource("Animation_ly6jm"),
&"move": SubResource("Animation_bf6qg")
}

[node name="EnemyThrower" instance=ExtResource("1_1xxe0")]
script = ExtResource("2_qdrwu")

[node name="Sprite2D" type="Sprite2D" parent="Direction" index="0"]
position = Vector2(0, -70)
texture = ExtResource("2_nee8l")
hframes = 3
vframes = 4

[node name="MarkerBoom" parent="Direction" index="1"]
position = Vector2(0, -67)

[node name="MarkerBox" type="Marker2D" parent="Direction" index="2"]
unique_name_in_owner = true
position = Vector2(2, -101)

[node name="AreaDetection" type="Area2D" parent="Direction" index="3"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/AreaDetection" index="0"]
position = Vector2(310, -197.5)
shape = SubResource("RectangleShape2D_ly6jm")

[node name="HitBox" type="Area2D" parent="Direction" index="4"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HitBox" index="0"]
position = Vector2(0.5, -68)
shape = SubResource("RectangleShape2D_nk60c")

[node name="CollisionShape2D" parent="." index="1"]
visible = false
position = Vector2(0, -68)
shape = SubResource("RectangleShape2D_qdrwu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_7d7re")
}

[node name="TimerIdle" type="Timer" parent="." index="3"]
unique_name_in_owner = true
one_shot = true

[node name="TimerMove" type="Timer" parent="." index="4"]
unique_name_in_owner = true
one_shot = true

[connection signal="body_entered" from="Direction/AreaDetection" to="." method="_on_area_detection_body_entered"]
[connection signal="body_exited" from="Direction/AreaDetection" to="." method="_on_area_detection_body_exited"]
[connection signal="body_entered" from="Direction/HitBox" to="." method="player_body_hit"]
